update and deleted function file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,15 @@
 {
-    "cSpell.words": [
-        "alphabe",
-        "asynchronysed",
-        "inputform",
-        "lenght",
-        "Newal",
-        "newsch",
-        "Rahab",
-        "reasign",
-        "Sherlyne",
-        "Uthiru"
-    ]
+  "cSpell.words": [
+    "alphabe",
+    "asynchronysed",
+    "inputform",
+    "lenght",
+    "MISSELENOUS",
+    "Newal",
+    "newsch",
+    "Rahab",
+    "reasign",
+    "Sherlyne",
+    "Uthiru"
+  ]
 }
